# dynamicpet

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  4-D_Denoising_User_Story.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml  labels.yml
.github/workflows/: constraints.txt  labeler.yml  pages.yml  release.yml  safety.yml  safety_scan.yml  tests.yml
Example_usage_SUVR/: Example_usage_SUVR.ipynb  example_18FAV45.json  example_18FAV45.nii
docs/: api.md  conf.py  index.md  pet_info.ipynb  reference.md  requirements.txt  usage.md
docs/notebooks/: basics.ipynb  basics.py  decay_correct.ipynb  decay_correct.py  denoise.ipynb  denoise.py  example.ipynb  pet_info.ipynb  suvr.ipynb  suvr.py
src/dynamicpet/: __init__.py  __main__.py  typing_utils.py
src/dynamicpet/denoise/: __init__.py  hypr.py  nesma.py
src/dynamicpet/kineticmodel/: __init__.py  kineticmodel.py  kinfitr.py  logan.py  patlak.py  srtm.py  suvr.py
src/dynamicpet/petbids/: __init__.py  petbidsimage.py  petbidsjson.py  petbidsmatrix.py  petbidsobject.py
src/dynamicpet/temporalobject/: __init__.py  temporalimage.py  temporalmatrix.py  temporalobject.py
tests/: __init__.py  test_kineticmodel.py  test_kineticmodel_simulated.py  test_kinfitr.py  test_main.py  test_petbidsimage.py  test_petbidsjson.py  test_petbidsmatrix.py  test_r.py  test_temporalmatrix.py
