[tool.poetry]
name = "dynamicpet"
version = "0.1.1"
description = "Dynamic PET"
authors = ["Murat Bilgel <bilgelm@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bilgelm/dynamicpet"
repository = "https://github.com/bilgelm/dynamicpet"
documentation = "https://dynamicpet.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/bilgelm/dynamicpet/releases"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nibabel = ">=4.0.2"
numpy = ">=1.24.3"
click = ">=8.1.3"
scipy = ">=1.10.1"
tqdm = ">=4.65.0"

rpy2 = { version = ">=3.5.12", optional = true }
types-tqdm = "^4.66.0.20240417"

[tool.poetry.extras]
kinfitr = ["rpy2"]

[tool.poetry.scripts]
kineticmodel = "dynamicpet.__main__:kineticmodel"
denoise = "dynamicpet.__main__:denoise"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=7.2.3"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.10.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = ">=1.0.0"
typeguard = ">=4.0.0rc1"
sphinx-click = ">=4.4.0"
requests = ">=2.31.0"
types-requests = ">=2.31.0.2"
myst-nb = "^1.1.1"
matplotlib = "^3.9.2"
matplotlib-stubs = "^0.2.0"
nilearn = "^0.10.4"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["dynamicpet", "tests"]
omit = ["src/dynamicpet/kineticmodel/kinfitr.py"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
